fixing how we work containers, updating name > id, and spacing updates

--- a/_sass/_templates/how-we-work.scss
+++ b/_sass/_templates/how-we-work.scss
@@ -54,9 +54,10 @@
   margin-top: 0;
 }
 
-.hww-main-content {
+.hww-item {
   h2 {
     @extend .small-caps;
+    margin-top: 0;
   }
 }
 
